Rework the main example app to include the `jpro-media` examples